@@ -1,0 +1,2 @@
+Copyright(c) 2004-2005 by Angus Turnbull http://www.twinhelix.com (for iepngfix.htc)
+Copyright(c) 2007-2009 by Yuri D'Elia <wavexx@users.sf.net>
