@@ -1,10 +1,10 @@
 <?php
 // user config
 $phpExt = ".php"; // you can use "" if you enable apache's MultiViews option
-$masterPath = "http://dl.example.com/";
+$masterPath = "https://abz03gm.eurac.edu/~ydelia/dl/htdocs/";
 $dbHandler = "db4"; // change to db3/db2/dbm depending on your php version
 $maxSize = ini_get('upload_max_filesize');
 $fromAddr = "ticket service <nobody@example.com>";
 $masterPass = "change me";
-$spoolDir = "/var/spool/dl/";
+$spoolDir = "/home/ydelia/public_html/.dl/";
 ?>
