@@ -8,7 +8,7 @@ includeTemplate('style/include/header.php', compact('title'));
   <p>dl: minimalist download ticket service</p>
 </div>
 
-<form action="<?php echo $masterPath . "?l"; ?>" method="post">
+<form action="<?=$masterPath?>?l" method="post">
   <input type="hidden" name="l"/>
   <ul>
 
@@ -128,8 +128,8 @@ for($key = dba_firstkey($tDb); $key; $key = dba_nextkey($tDb))
 <p>Total archive size: <?php echo humanSize($totalSize); ?></p>
 
 <div id="footer">
-  <a href="<?php echo $masterPath; ?>">Submit new ticket</a>,
-  <a href="<?php echo $masterPath; ?>?p">Logout</a>
+  <a href="<?=$masterPath?>">Submit new ticket</a>,
+  <a href="<?=$masterPath?>?p">Logout</a>
 </div>
 
 <?php
