@@ -9,15 +9,15 @@ includeTemplate('style/include/header.php', compact('title'));
 </div>
 
 <form enctype="multipart/form-data" method="post"
-      no-onsubmit="document.forms[0].submit.disabled = true;"
-      action="<?php echo $masterPath; ?>" >
-  <input type="hidden" name="max_file_size" value="<?php echo $iMaxSize; ?>"/>
+      onsubmit="document.getElementById('submit').disabled = true;"
+      action="<?=$masterPath?>" >
+  <input type="hidden" name="max_file_size" value="<?=$iMaxSize?>"/>
   <ul>
     <li>
       <label class="description">Upload a File</label>
       <div>
 	<input name="file" class="element file" type="file"/>
-      </div><p class="guidelines"><small>Chose wich file to upload.</small></p>
+      </div><p class="guidelines"><small>Chose wich file to upload. You can upload up to <?=$hMaxSize?>.</small></p>
     </li>
 
     <li>
@@ -64,16 +64,16 @@ includeTemplate('style/include/header.php', compact('title'));
     </li>
 
     <li class="buttons">
-      <input class="button_text" type="submit" name="submit" value="Upload"/>
-      <input class="button_text" type="reset" name="submit" value="Reset"/>
-      <input class="button_text" type="button" name="submit" value="Set as defaults "onclick="setDefaults();"/>
+      <input id="submit" type="submit" name="submit" value="Upload"/>
+      <input type="reset" name="submit" value="Reset"/>
+      <input type="button" name="submit" value="Set as defaults "onclick="setDefaults();"/>
     </li>
   </ul>
 </form>
 
 <div id="footer">
-  <a href="<?php echo $masterPath; ?>?l">List active tickets</a>,
-  <a href="<?php echo $masterPath; ?>?p">Logout</a>
+  <a href="<?=$masterPath?>?l">List active tickets</a>,
+  <a href="<?=$masterPath?>?p">Logout</a>
 </div>
 
 <script>
